<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    android:backgroundTint="#3CBAFA8D"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    android:minHeight="70dp">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="80dp">

      <TextView
          android:id="@+id/idNO"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:text="@string/_1"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold|italic" />

      <androidx.appcompat.widget.LinearLayoutCompat
          android:id="@+id/titleLinear"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_margin="10dp"
          app:layout_constraintStart_toEndOf="@+id/idNO"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:orientation="vertical">

          <TextView
              android:id="@+id/title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingStart="5dp"
              android:paddingTop="5dp"
              android:paddingEnd="5dp"
              android:text="@string/note_title"
              android:textColor="@color/black"
              android:textSize="18sp"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/desc"
              style="@android:style/Widget.TextView.PopupMenu"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:maxLength="50"
              android:padding="5dp"
              android:text="@string/it_s_a_descriptiom"
              android:textColor="@color/black"
              android:textSize="14sp"
              android:textStyle=""
              tools:ignore="TouchTargetSizeCheck" />
      </androidx.appcompat.widget.LinearLayoutCompat>

      <ImageButton
          android:id="@+id/delete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:background="#3CBAFA8D"
          android:contentDescription="@string/delete"
          android:src="@drawable/delete"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="TouchTargetSizeCheck" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>





